--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,11 +6,11 @@
   <title>Hello World!</title>
   <!-- TODO: Change connect-src -->
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'none'; img-src 'self' data:; media-src 'self'; child-src 'self'; object-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' http://localhost:4000; font-src 'self' data:">
+    content="default-src 'none'; img-src 'self' https:; media-src 'self'; child-src 'self'; object-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' http://localhost:4000; font-src 'self' data:">
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" class="loader"></div>
 </body>
 
 </html>
