--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>Hello World!</title>
-  <!-- TODO: Change connect-src -->
+  <!-- TODO: connect-src -->
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'none'; img-src 'self' https:; media-src 'self'; child-src 'self'; object-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' http://localhost:4000; font-src 'self' data:">
+    content="default-src 'none'; img-src 'self' https:; media-src 'self'; child-src 'self'; object-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src 'self' http://localhost:4000 ws://localhost:4000; font-src 'self' data:">
 </head>
 
 <body>
